Fix contrast issue for tagline

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -734,7 +734,7 @@ $sidebar-display: "sidebar-display";
 
   .site-subtitle {
     font-size: 95%;
-    color: var(--sidebar-muted-color);
+    color: var(--sidebar-tagline-color);
     line-height: 1.2rem;
     word-spacing: 1px;
     margin: 0.5rem 1.5rem 0.5rem 1.5rem;
