--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -35,6 +35,7 @@
   --sidebar-active-color: rgb(255 255 255 / 80%);
   --nav-cursor-color: rgb(183, 182, 182);
   --sidebar-btn-bg: rgb(117 116 116 / 20%);
+  --sidebar-tagline-color: #8f8f8f;
 
   /* Topbar */
   --topbar-text-color: var(--text-color);
