--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -33,6 +33,7 @@
   --sidebar-active-color: #424242;
   --nav-cursor-color: #757575;
   --sidebar-btn-bg: white;
+  --sidebar-tagline-color: #6a6a6a;
 
   /* Topbar */
   --topbar-text-color: rgb(78, 78, 78);
